added api for post, basic dashboard, search for title and description